fix details page input spacing issue

--- a/src/main/frontend/src/record/details/components/_sectionCommon.scss
+++ b/src/main/frontend/src/record/details/components/_sectionCommon.scss
@@ -19,16 +19,24 @@
 
 		.column {
 			.juno-input {
+				margin-top: 8px;
 				width: $field-width;
 			}
 			.juno-select {
+				margin-top: 8px;
 				width: $field-width;
 			}
 			.juno-date-select {
+				margin-top: 8px;
 				width: $field-width;
 			}
 			.juno-typeahead {
+				margin-top: 8px;
 				width: $field-width;
+			}
+			.mha-patient-connection,
+			.juno-button {
+				margin-top: 8px;
 			}
 		}
 	}
